--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,3 +1,6 @@
+---
+import "../styles.css"
+---
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -12,7 +15,6 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Space+Grotesk:wght@300..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/src/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
