--- a/src/components/featured/featured.astro
+++ b/src/components/featured/featured.astro
@@ -3,7 +3,7 @@ import "glider-js/glider.min.css";
 import FeaturedProductsWrapper from "./FeaturedProductsWrapper.jsx";
 ---
 
-<div class="products">
+<div class="featured_container">
   <h2>🌟 Los más vendidos</h2>
 
   <!-- Montar todo React -->
