--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,16 +1,11 @@
 <footer class="footer">
   <div class="footer__top">
     <div class="footer__brand">
-      <img
-        src="/domingo_verde_transparente.png"
-        alt="logo empresa"
-        width="150"
-        height="150"
-      />
+      <img src="/footer_logo.png" alt="logo empresa" loading="lazy" />
     </div>
 
     <div class="footer__contacto">
-      <p><strong>Contacto:</strong></p>
+      <p class="footer__title">Contacto</p>
       <p>
         <a href="https://wa.me/56950727028" target="_blank">+56 9 5072 7028</a>
       </p>
@@ -20,33 +15,53 @@
     </div>
 
     <div class="footer__redes">
-      <p><strong>Síguenos:</strong></p>
-      <a
-        href="https://instagram.com/domingo_verde"
-        target="_blank"
-        rel="noopener noreferrer"
-        class="instagram-link"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="32"
-          height="32"
-          fill="#539987"
-          viewBox="0 0 24 24"
+      <p class="footer__title">Síguenos</p>
+      <div class="footer__links">
+        <a
+          href="https://instagram.com/domingo_verde"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="instagram-link"
         >
-          <path
-            d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zm4.25 3.25a5.25 5.25 0 1 1 0 10.5a5.25 5.25 0 0 1 0-10.5zm0 1.5a3.75 3.75 0 1 0 0 7.5a3.75 3.75 0 0 0 0-7.5zm5.38-.38a1.13 1.13 0 1 1 0 2.26a1.13 1.13 0 0 1 0-2.26z"
-          ></path>
-        </svg>
-      </a>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="28"
+            height="28"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zm4.25 3.25a5.25 5.25 0 1 1 0 10.5a5.25 5.25 0 0 1 0-10.5zm0 1.5a3.75 3.75 0 1 0 0 7.5a3.75 3.75 0 0 0 0-7.5zm5.38-.38a1.13 1.13 0 1 1 0 2.26a1.13 1.13 0 0 1 0-2.26z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          href="https://facebook.com/domingo_verde"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="facebook-link"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="28"
+            height="28"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987H8.078v-2.89h2.36V9.797c0-2.337 1.393-3.626 3.523-3.626.707 0 1.437.126 1.437.126v1.58h-.81c-.8 0-1.05.497-1.05 1.007v1.21h2.004l-.32 2.89h-1.684V21.88C18.343 21.128 22 16.991 22 12z"
+            ></path>
+          </svg>
+        </a>
+      </div>
     </div>
   </div>
 
   <div class="footer__bottom">
     <p>© 2025 Domingo Verde. Todos los derechos reservados.</p>
     <p>
-      <a href="/terminos">Términos y condiciones</a> | <a href="/privacidad"
-        >Política de privacidad</a>
+      <a href="/terminos">Términos y condiciones</a> |
+      <a href="/privacidad">Política de privacidad</a>
     </p>
   </div>
 </footer>
