--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -3,13 +3,12 @@ import CartIcon from "./cart/CartIcon";
 ---
 <div class="top__bar">
   <p>🚚 Envíos gratis por compras sobre $10.000</p>
-  <p> 🚀 ¡Recibe tu compra hoy mismo! 🚀 </p>
 </div>
 
 <header class="main-header">
   <div class="header-container">
     <a href="/" class="logo">
-      <img src="/ONLY_LOGO_DOMINGO_VERDE_TRANSPARENT.png" alt="Logo domigno verde" />
+      <img src="/header_logo.png" alt="Logo domingo verde" />
     </a>
 
     <button class="menu-toggle" id="menu-toggle" aria-label="Abrir menú">
