--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -12,6 +12,9 @@
       <p>
         <a href="mailto:contacto@domingoverde.cl">contacto@domingoverde.cl</a>
       </p>
+      <p>
+        <a href="/admin">admin (colaboradores)</a>
+      </p>
     </div>
 
     <div class="footer__redes">
