--- a/src/pages/compraconfirmada.astro
+++ b/src/pages/compraconfirmada.astro
@@ -5,13 +5,15 @@ import Footer from "../components/footer.astro"
 ---
 <Layout pageTitle="Home">
   <Header />
+  <div class="compraconfirmada-wrapper">
     <section class="compraconfirmada-container">
       <h1>🎉 ¡Gracias por tu compra!</h1>
-      <p>Tu pedido fue procesado correctamente.</p>
+      <p>Te contactaremos a la brevedad via whatsapp para gestionar la entrega.</p>
       <a href="/" class="btn-home">
         Volver al inicio
       </a>
     </section>
+  </div>
   <Footer />
 </Layout>
 
