--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,6 +23,7 @@
 @use './pages/admin/compras'; 
 @use './pages/admin/ventaModal'; 
 @use './pages/admin/sidebar'; 
+@use './pages/admin/login'; 
 
 
 
