--- a/src/pages/compraconfirmada.astro
+++ b/src/pages/compraconfirmada.astro
@@ -8,7 +8,7 @@ import Footer from "../components/footer.astro"
   <div class="compraconfirmada-wrapper">
     <section class="compraconfirmada-container">
       <h1>🎉 ¡Gracias por tu compra!</h1>
-      <p>Te contactaremos a la brevedad via whatsapp para gestionar la entrega.</p>
+      <p>Tu pedido ha sido registrado correctamente. ¡Sigue explorando y descubre más productos que te encantarán!</p>
       <a href="/" class="btn-home">
         Volver al inicio
       </a>
