--- a/src/styles/pages/cart/_checkout.scss
+++ b/src/styles/pages/cart/_checkout.scss
@@ -9,10 +9,10 @@
 .checkout-page {
   max-width: 500px;
   margin: 2rem;
-  background: colors.$white;
+  background: colors.$grey;
   padding: 2.5rem 2rem;
   border-radius: 12px;
-  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 6px 18px rgba(39, 39, 39, 0.3);
 
   h2 {
     margin-bottom: 1.5rem;
