--- a/src/components/banner.astro
+++ b/src/components/banner.astro
@@ -1,5 +1,5 @@
 <section class="banner">
-  <img src="/banner.jpg" alt="banner" />
+  <img src="/banner_2.jpg" alt="banner" />
   <div class="banner__cta">
     <a href="/tienda" class="btn-primary">Compra aquí</a>
   </div>
