--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 
 .banner {
   width: 100%;
-  aspect-ratio: 2.75/1;
+  aspect-ratio: 3.5/1;
   overflow: hidden;
   position: relative;
 }
@@ -768,10 +768,10 @@
 .checkout-page {
   max-width: 500px;
   margin: 2rem;
-  background: #ffffff;
+  background: #f5f5f5;
   padding: 2.5rem 2rem;
   border-radius: 12px;
-  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 6px 18px rgba(39, 39, 39, 0.3);
   /* Lista de productos */
   /* Total */
   /* Secciones */
