--- a/src/components/banner.astro
+++ b/src/components/banner.astro
@@ -1,6 +1,6 @@
 <section class="banner">
   <img src="/banner_2.jpg" alt="banner" />
   <div class="banner__cta">
-    <a href="/tienda" class="btn-primary">Compra aquí</a>
+    <a href="/tienda" class="btn-primary">Ir a la tienda</a>
   </div>
 </section>
