--- a/src/components/banner.astro
+++ b/src/components/banner.astro
@@ -1,5 +1,8 @@
 <section class="banner">
-  <img src="/banner_2.jpg" alt="banner" />
+  <picture>
+    <source srcSet="/banner_2_mobile.jpg" media="(max-width: 678px)" />
+    <img src="/banner_2.jpg" alt="banner" />
+  </picture>
   <div class="banner__cta">
     <a href="/tienda" class="btn-primary">Ir a la tienda</a>
   </div>
