--- a/src/pages/campo.astro
+++ b/src/pages/campo.astro
@@ -18,12 +18,12 @@ import Footer from "../components/footer.astro";
     </div>
 
     <div class="campo__image">
-      <img src="/campo.jpg" alt="Imagen del campo de origen" loading="lazy" />
-      <img src="/campo_2.jpg" alt="Imagen del campo de origen 2" loading="lazy"/>
-      <img src="/campo.jpg" alt="Imagen del campo de origen" loading="lazy" />
-      <img src="/campo_2.jpg" alt="Imagen del campo de origen 2" loading="lazy"/>
-      <img src="/campo.jpg" alt="Imagen del campo de origen" loading="lazy" />
-      <img src="/campo_2.jpg" alt="Imagen del campo de origen 2" loading="lazy"/>
+      <img src="/Campo/campo_1.jpg" alt="Imagen del campo de origen" loading="lazy" />
+      <img src="/Campo/campo_2.jpg" alt="Imagen del campo de origen" loading="lazy" />
+      <img src="/Campo/campo_3.jpg" alt="Imagen del campo de origen" loading="lazy" />
+      <img src="/Campo/campo_4.jpg" alt="Imagen del campo de origen" loading="lazy" />
+      <img src="/Campo/campo_1.jpg" alt="Imagen del campo de origen" loading="lazy" />
+      <img src="/Campo/campo_2.jpg" alt="Imagen del campo de origen" loading="lazy" />
     </div>
   </section>
   <Footer />
