--- a/src/styles/pages/home/_reviews.scss
+++ b/src/styles/pages/home/_reviews.scss
@@ -132,3 +132,21 @@
 
   }
 }
+
+.star-title {
+     width: 20px;
+      height: 20px;
+      color: #fbbf24;
+        fill: #fbbf24;
+}
+    
+
+.review-subtitle{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  font-size: 1.1rem;
+  font-weight: 500;
+
+}
