--- a/src/components/banner.astro
+++ b/src/components/banner.astro
@@ -1,6 +1,6 @@
 <section class="banner">
   <picture>
-    <source srcSet="/banner_2_mobile.jpg" media="(max-width: 678px)" />
+    <source srcset="/banner_2_mobile.jpg" media="(max-width: 678px)" />
     <img src="/banner_2.jpg" alt="banner" />
   </picture>
   <div class="banner__cta">
