add 2 reviews photos

--- a/src/components/advantages/advantages.astro
+++ b/src/components/advantages/advantages.astro
@@ -6,23 +6,23 @@ import AdvantageItem from './advantagesItem/advantageItem.astro';
     <AdvantageItem 
       icon="✅" 
       title="Somos Productores" 
-      description="Controlamos todo desde el cultivo hasta tu mesa. Garantizando frescura y calidad."
+      description="Controlamos todo desde el cultivo hasta tu mesa."
     />
 
     <AdvantageItem 
       icon="🥑" 
       title="Elige el Punto de Maduración" 
-      description="¿Verdes, maduras, mezcladas? Tú eliges."
+      description="¿Verdes, premaduras, maduras?"
     />
     <AdvantageItem 
       icon="💳" 
       title="Paga Como Quieras" 
-      description="Aceptamos tarjeta de débito/crédito, transferencia o efectivo."
+      description="Aceptamos tarjeta, transferencia o efectivo."
     />
     <AdvantageItem 
       icon="🚚" 
       title="Venta Mayorista" 
-      description="Venta y precio a mayoristas. Precios competitivos y entregas eficientes."
+      description="Venta por gamelas y precio a mayoristas"
     />
   </div>
 </section>
