--- a/src/components/advantages/advantages.astro
+++ b/src/components/advantages/advantages.astro
@@ -6,12 +6,12 @@ import AdvantageItem from './advantagesItem/advantageItem.astro';
     <AdvantageItem 
       icon="✅" 
       title="Somos Productores" 
-      description="Controlamos todo desde el cultivo hasta tu mesa."
+      description="Controlamos desde el cultivo a tu mesa."
     />
 
     <AdvantageItem 
       icon="🥑" 
-      title="Elige el Punto de Maduración" 
+      title="Elige la Maduración" 
       description="¿Verdes, premaduras, maduras?"
     />
     <AdvantageItem 
@@ -22,7 +22,7 @@ import AdvantageItem from './advantagesItem/advantageItem.astro';
     <AdvantageItem 
       icon="🚚" 
       title="Venta Mayorista" 
-      description="Venta por gamelas y precio a mayoristas"
+      description="Venta por gamelas y precio mayoristas"
     />
   </div>
 </section>
