--- a/src/styles/pages/admin/_compras.scss
+++ b/src/styles/pages/admin/_compras.scss
@@ -83,7 +83,7 @@
     }
 
     .estado.cancelada {
-      background-color: colors.$ligth-red;
+      background-color: colors.$light-red;
     }
 
     .estado.recibida {
