--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,7 +3,7 @@
 .top__bar {
   height: 2rem;
   background-color: colors.$yellow;
-  color: colors.$tertiary;
+  color: colors.$primary;
   font-size: 0.9rem; // 16px en desktop
   font-weight: 700;
   display: flex;
@@ -30,16 +30,14 @@
   top: 0;
   width: 100%;
   z-index: 999;
-  background-color: colors.$grey;
+  background: colors.$bg;    // Degradado moderno
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 
-  @media (max-width: 1080px) {
-  }
 }
 .header-container {
   max-width: 1000px;
   margin: 0 auto;
-  padding: 1rem 2rem; // 16px vertical, 32px horizontal
+  padding: 0.5rem 2rem; // 16px vertical, 32px horizontal
   display: flex;
   align-items: center;
   justify-content: center;
@@ -67,14 +65,19 @@
 .cart-container {
   .cart-icon {
     position: relative;
-    color: colors.$tertiary;
+    color: colors.$white;
+    transition: color 0.3s ease;
     font-size: 1.5rem;
+
+    &:hover {
+      color: colors.$accent; // Coral moderno
+    }
 
     .badge {
       position: absolute;
       top: -0.3rem;
       right: -0.5rem;
-      background: colors.$ligth-green;
+      background: colors.$red;   // Rojo notificación
       color: colors.$white;
       border-radius: 50%;
       padding: 0.15rem 0.45rem;
@@ -96,12 +99,12 @@
     li a {
       text-decoration: none;
       font-weight: 500;
-      font-size: 1.125rem;
-      color: colors.$primary;
+      font-size: 1rem;
+      color: colors.$white;
       transition: color 0.3s ease, transform 0.3s ease;
 
       &:hover {
-        color: colors.$green;
+        color: colors.$yellow;
         transform: scale(1.05);
       }
     }
@@ -122,6 +125,7 @@
       gap: 1rem;
       padding: 1rem 1.5rem;
       li a {
+        color: colors.$primary;
         font-size: 1rem; // 16px en mobile
       }
     }
@@ -137,7 +141,7 @@
   font-size: 1.75rem; // 28px
   background: none;
   border: none;
-  color: colors.$primary;
+  color: colors.$white;
   cursor: pointer;
 
   @media (max-width: 1080px) {
