--- a/src/styles/pages/home/_banner.scss
+++ b/src/styles/pages/home/_banner.scss
@@ -24,7 +24,7 @@
       display: inline-block;
       padding: 0.75rem 2rem;
       font-size: 1.2rem;
-      background-color: colors.$primary;
+      background: linear-gradient(145deg, #008f39, #17402a);
       color: colors.$white;
       border: none;
       border-radius: 1rem;
