--- a/src/styles/components/_whatsappButton.scss
+++ b/src/styles/components/_whatsappButton.scss
@@ -12,6 +12,11 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     transition: transform 0.2s ease, box-shadow 0.2s ease;
     z-index: 1000;
+
+    @media (max-width: 420px) {
+        bottom: 20px;
+        right: 20px;
+    }
   }
 
   .whatsapp-float:hover {
