fix footer colors

--- a/src/styles.css
+++ b/src/styles.css
@@ -3225,7 +3225,7 @@ button:hover {
   gap: 1rem;
 }
 .footer a {
-  color: #3DDC84;
+  color: #46705f;
   text-decoration: none;
 }
 .footer a:hover {
