--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -70,8 +70,8 @@
     font-size: 1.5rem;
 
     &:hover {
-      color: colors.$accent; // Coral moderno
-    }
+      color: rgba(255, 255, 255, 0.7); /* blanco más tenue */
+    }  
 
     .badge {
       position: absolute;
@@ -98,13 +98,13 @@
 
     li a {
       text-decoration: none;
-      font-weight: 500;
+      font-weight: 700;
       font-size: 1rem;
       color: colors.$white;
       transition: color 0.3s ease, transform 0.3s ease;
 
       &:hover {
-        color: colors.$yellow;
+         color: rgba(255, 255, 255, 0.7); /* blanco más tenue */
         transform: scale(1.05);
       }
     }
