--- a/src/styles/pages/home/_featured.scss
+++ b/src/styles/pages/home/_featured.scss
@@ -22,6 +22,7 @@
     margin-block: 1.25rem;
     gap: 1rem;
   }
+
   @media (max-width: 420px) {
     margin-block: 0.75rem;
     gap: 0.5rem;
@@ -131,6 +132,7 @@
   .category-badge {
     position: absolute;
     top: 0.75rem;
+    left: 0;
     background: green;
     color: white;
     font-size: 0.75rem;
@@ -138,6 +140,19 @@
     text-transform: uppercase;
     padding: 0.25rem 0.5rem;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+
+    &.verduras {
+      background: colors.$green; // tu verde intenso
+    }
+
+    &.huevos {
+      background: #f9d776; // amarillo suave
+      color: #111; // mejor contraste con amarillo
+    }
+
+    &.frutas {
+      background: colors.$ligth-green; // 
+    }
   }
 
   .price {
@@ -176,7 +191,7 @@
     }
 
     &:hover {
-      background: colors.$green;
+      background: linear-gradient(145deg, #00b25b, #2e7d32); /* verde más brillante */
     }
   }
 }
@@ -232,9 +247,7 @@
 
   .featured-item {
     max-width: calc(50%);
-    padding: 0.5rem;
     border-radius: 8px;
-
 
     img {
       height: 110px;
